# python_lab_2026

./: LICENSE
10_05/: h.py
10_05/balistyka/: balistyka.py  balistyka2.py  camera.py  game.py  main.py  map.py  view.py
10_05/cpp/: z2.py  z3.py  z4.py
10_05/cpp/src/: CMakeLists.txt  average.cpp  operations.cpp  point.cpp  power.cpp
10_05/dnn/: dnn.py
10_05/fraction/: fraction.py  main.py
10_05/kamera/: main.py  viewer.py
10_05/kule/: ball.py  kule.py
10_05/meta/: data.txt  z1.py  z10.py  z11.py  z2.py  z3.py  z4.py  z5.py  z6.py  z8.py  z9.py
10_05/pogoda/: main.py  mainwidget.py  polska.py  settingsdialog.py
10_05/pogoda_wykres/: polska.py  wykres.py
10_05/tablice/: tablice.py
12_45/: balistyka.py
12_45/balistyka/: balistyka.py  balistyka2.py  bullet.py  camera.py  game.py  main.py  map.py  map.txt  view.py
12_45/cpp/: z1.py  z2.py  z3.py  z4.py
12_45/cpp/src/: CMakeLists.txt  avg.cpp  main.cpp  operations.cpp  point.cpp  power.cpp
12_45/dnn/: dnn.py
12_45/fraction/: fraction.py  main.py  mixedfraction.py
12_45/kamera/: main.py  viewer.py
12_45/kule/: ball.py  kule.py
12_45/kule/models/: kule.py
12_45/meta/: data.txt  z1.py  z10.py  z11.py  z2.py  z3.py  z4.py  z5.py  z6.py  z7.py  z8.py  z9.py
12_45/pogoda/: main.py  mainwidget.py  settingsdialog.py
12_45/pogoda_wykres/: polska.py  wykres.py
12_45/tablice/: tablice.py
